<package format="2">
  <name>vis_point_cloud_transformers</name>
  <version>0.1.0</version>
  <description>
    Plugins for the PointCloud Display plugin
  </description>
  <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
  <license>TODO</license>

  <author>Andreas Reich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>rviz</depend>
  <depend>ogre_helpers</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
